adj: arrows z-index + stop button functions

--- a/css/style.css
+++ b/css/style.css
@@ -56,6 +56,7 @@
 
 .container #thumbnails .arrow {
     position: absolute;
+    z-index: 2;
 
     color: white;
     cursor: pointer;
